# stm32f7-sv2

./: Cargo.toml  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: main.rs
