[package]
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
categories = ["embedded", "no-std", "bitcoin"]
description = "Stratum v2 no_std example on STM32H7"
edition = "2021"
keywords = ["embedded", "stratum", "esp", "esp32s3", "no-std"]
license = "MIT OR Apache-2.0"
name = "stm32f7-sv2"
repository = "https://github.com/GPTechinno/stm32f7-sv2"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.39", default-features = false }
# codec_sv2 = { version = "2.0.0", git = "https://github.com/stratum-mining/stratum.git", default-features = false, features = [
#     "noise_sv2",
# ] }
codec_sv2 = { version = "2.0.0", path = "../stratum/protocols/v2/codec-sv2", default-features = false, features = [
    "noise_sv2",
] }
# const_sv2 = { version = "3.0.0", git = "https://github.com/stratum-mining/stratum.git" }
const_sv2 = { version = "3.0.0", path = "../stratum/protocols/v2/const-sv2" }
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
edge-mdns = { version = "0.5.0", features = ["io"] }
edge-nal = { version = "0.5.0" }
edge-nal-embassy = { version = "0.5.0" }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    # "executor-interrupt",
    "executor-thread",
    "task-arena-size-32768",
] }
# embassy-futures = "0.1.0"
embassy-net = { version = "0.6.0", features = [
    "dhcpv4",
    "dns",
    "medium-ethernet",
    # "multicast",
    "proto-ipv6",
    "tcp",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "chrono",
    "exti",
    "memory-x",
    "stm32f767zi",
    "time-driver-any",
    "unstable-pac",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embedded-alloc = "0.6.0"
embedded-io-async = "0.6.1"
# key-utils = { version = "1.1.0", git = "https://github.com/stratum-mining/stratum.git", default-features = false }
key-utils = { version = "1.1.0", path = "../stratum/utils/key-utils", default-features = false }
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
rand_core = "0.6.4"
sntpc = { version = "0.5.2", features = [
    "embassy-socket",
], default-features = false }
static_cell = "2.1.0"

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    # "embassy-futures/defmt",
    "embassy-net/defmt",
    "embassy-net/packet-trace",
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embedded-io-async/defmt-03",
    "sntpc/defmt",
]

[[bin]]
name = "stm32f7-sv2"
test = false
bench = false

# cargo build/run
[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

# cargo build/run --release
[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
